# myfeeds_ai

./: .gitmodules  README.md  karma.conf.cjs  package-lock.json  package.json  pyproject.toml  requirements-test.txt  start-local-server.sh  wallaby.cjs
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml  create-persona-digest.yml
cbr_custom_data_feeds/config/: Custom_News__Shared_Constants.py
cbr_custom_data_feeds/data_feeds/: Data_Feeds__Files.py  Data_Feeds__Http_Content.py  Data_Feeds__S3_DB.py  Data_Feeds__S3__Key_Generator.py  Data__Feeds__Shared_Constants.py
cbr_custom_data_feeds/fast_api/: Data_Feeds__Fast_API.py
cbr_custom_data_feeds/lambdas/: handler.py
cbr_custom_data_feeds/open_api/: open-api.html  openapi.json
cbr_custom_data_feeds/static/: index.html
cbr_custom_data_feeds/utils/: Version.py
cbr_custom_data_feeds_ui/: karma.conf.cjs  run-karma.sh  wallaby.cjs
cbr_custom_news_feeds/config/: Custom_News__Shared_Constants.py
cbr_custom_news_feeds/fast_api/: News_Feeds__Fast_API.py
cbr_custom_news_feeds/lambdas/: handler.py
cbr_custom_news_feeds/news_feeds/: News_Feeds__Http_Content.py
cbr_custom_news_feeds/utils/: Version.py
deploy/lambdas/: Deploy_Lambda__Cbr_Custom__Data_Feeds.py  Deploy_Lambda__Cbr_Custom__News_Feeds.py  Deploy_Lambda__MyFeeds_AI.py  test_Deploy_Lambda__Cbr_Custom__Data_Feeds.py  test_Deploy_Lambda__Cbr_Custom__News_Feeds.py  test_Deploy_Lambda__MyFeeds_AI.py
docs/: draft-notes.md  similar-services.md
docs/dev/: personalised-news-feed-architecture.md
myfeeds_ai/: version
myfeeds_ai/data_feeds/: Data_Feeds__Files.py  Data_Feeds__Http_Content.py  Data_Feeds__Parser.py  Data_Feeds__S3_DB.py  Data_Feeds__S3__Key_Generator.py  Data_Feeds__Shared_Constants.py
myfeeds_ai/fast_api/: Data_Feeds__Fast_API.py
myfeeds_ai/lambdas/: handler.py
myfeeds_ai/providers/: RSS_Providers.py  rss-providers-data.toml
myfeeds_ai/rss_feeds/: RSS_Feeds.py  RSS_Feeds__Fast_API.py
myfeeds_ai/utils/: Flow_Events__To__Open_Observe.py  My_Feeds__Utils.py  Version.py
tests/integration/: data_feeds__objs_for_tests.py  data_feeds__test_data.py  news_feeds__objs_for_tests.py  news_feeds__test_data.py
tests/qa/: test__live_lambda_function.py
tests/web_ui/: karma.conf.cjs  wallaby.cjs
(+462 files in other folders)
