[tool.poetry]
name        = "cbr_custom_data_feeds"
version     = "v1.20.0"
description = "CBR Custom - Data Feeds"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-custom--data-feeds"
repository  = "https://github.com/the-cyber-boardroom/cbr-custom--data-feeds"

[tool.poetry.dependencies]
python             = "^3.11"
osbot-utils        = "*"
osbot-aws          = "*"
osbot-fast-api     = "*"
osbot-local-stack  = "*"
mangum             = "*"
httpx              = "*"
uvicorn            = "*"
bs4                = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
