[tool.poetry]
name        = "myfeeds_ai"
version     = "v1.27.0"
description = "MyFeeds.ai"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/myfeeds_ai"
repository  = "https://github.com/the-cyber-boardroom/myfeeds_ai"

[tool.poetry.dependencies]
python             = "^3.11"
osbot-utils        = "*"
osbot-aws          = "*"
osbot-fast-api     = "*"
osbot-local-stack  = "*"
mangum             = "*"
httpx              = "*"
uvicorn            = "*"
bs4                = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
